--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
    	<!-- CSS -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- ./CSS -->
 	
 	<script src="bower_components/angular/angular.js"></script>
@@ -17,23 +18,38 @@
 
 </head>
 <body>
-  <header class="container">
-  	<a href="#/">Home</a>
-  	<nav>
-  		<ul>
-  			<li><a href="#/quienes-somos/">Quienes Somos</a></li>
-  			<li><a href="#/proyectos/valle-hermoso/">Proyectos</a></li>
-  			<li><a href="#/contactenos/">Contactenos</a></li>
-  		</ul>
-  	</nav>
-  </header>	
-  <div class="container">
-    
-        <!-- all -->
-        <div ng-view></div>
-        <!-- ./all -->
-        
-    </div>
+	<nav class="navbar navbar-default navbar-top" ng-controller="HeaderController">
+      <div class="container">
+        <header class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#/">Avenir</a>
+        </header>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li ng-class="{ active: isActive('/quienes-somos/') }"><a href="#quienes-somos">Quienes Somos</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Proyectos <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li ng-class="{ active: isActive('/proyectos/valle-hermoso') }" ><a href="#proyectos/valle-hermoso/">Valle Hermoso</a></li>                
+              </ul>
+            </li>
+            <li ng-class="{ active: isActive('/contactenos/') }"><a href="#/contactenos/">Contactenos</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">            
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>  
+	<div class="container">	    
+	    <div ng-view></div>
+	</div>
     <footer class="container">footer</footer>
 </body>
 </html>
