--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    	<!-- CSS -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="texto" href="css/text.css">
     <!-- ./CSS -->
 	
 	<script src="bower_components/angular/angular.js"></script>
@@ -27,26 +28,34 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#/">Avenir</a>
+          <div class="logo">
+            <img src="img/soport-logo.png" alt="">
+            <a class="navbar-brand nav-ave" href="index.html"><img src="img/logo.png" alt=""></a> 
+          </div>           
         </header>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li ng-class="{ active: isActive('/quienes-somos/') }"><a href="#quienes-somos">Quienes Somos</a></li>
+        <div id="navbar " class="navbar-collapse collapse ">
+          <ul class="nav navbar-nav nav-2">
+            <li ng-class="{ active: isActive('/quienes-somos/') }">
+              <a href="#quienes-somos">QUIENES SOMOS</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Proyectos <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PROYECTOS <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li ng-class="{ active: isActive('/proyectos/valle-hermoso') }" ><a href="#proyectos/valle-hermoso/">Valle Hermoso</a></li>                
+                <li ng-class="{ active: isActive('/proyectos/valle-hermoso') }" >
+                  <a href="#proyectos/valle-hermoso/">VALLE HERMOSO</a>
+                  <a href="#proyectos/firenze/">FIRENZE</a>
+                </li>                
               </ul>
             </li>
-            <li ng-class="{ active: isActive('/contactenos/') }"><a href="#/contactenos/">Contactenos</a></li>
+            <li ng-class="{ active: isActive('/contactenos/') }"><a href="#/contactenos/">CONTACTENOS</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">            
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li class="fb-img"><a href="#"></a></li>
+            <li class="yt-img"><a href="#"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
-    </nav>  
+  </nav>
+
 	<div class="container">	    
 	    <div ng-view></div>
 	</div>
