--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="texto" href="css/text.css">
+    <link rel="stylesheet" type="responsive" href="css/responsive.css">
     <!-- ./CSS -->
 	
 	<script src="bower_components/angular/angular.js"></script>
@@ -16,6 +17,13 @@
 	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
+
+  <!-- jQuery library (served from Google) -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!-- bxSlider Javascript file -->
+<script src="js/jquery.bxslider.min.js"></script>
+<!-- bxSlider CSS file -->
+<link href="css/jquery.bxslider.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -49,16 +57,26 @@
             <li ng-class="{ active: isActive('/contactenos/') }"><a href="#/contactenos/">CONTACTENOS</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">            
-            <li class="fb-img"><a href="#"></a></li>
-            <li class="yt-img"><a href="#"></a></li>
+            <li class="fb-img"><a href="https://www.facebook.com/avenirgrupoinmobiliario?fref=ts" target="_blank"></a></li>
+            <li class="yt-img"><a href="https://www.youtube.com/user/avenirinmobiliaria" target="_blank"></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
   </nav>
 
 	<div class="container">	    
-	    <div ng-view></div>
+	    <div ng-view>
+        
+      </div>   
+
 	</div>
     <footer class="container">footer</footer>
+
+<script>  
+    $(document).ready(function(){
+      $('.bxslider').bxSlider();
+    });
+  </script>
+  
 </body>
 </html>
