--- a/index.html
+++ b/index.html
@@ -63,14 +63,20 @@
         </div><!--/.nav-collapse -->
       </div>
   </nav>
-
-	<div class="container">	    
+   
 	    <div ng-view>
         
-      </div>   
+      </div>  
 
-	</div>
-    <footer class="container">footer</footer>
+	
+    <footer class="fon-fot">
+      <div class="container">
+        <div class="row ">
+          <div class="col-xs-6 col-sm-6 col-md-6 text-left"><a href="index.html"><img src="img/logo-avenir2.jpg" alt="avenir"></a></div>
+          <div class="col-xs-6 col-sm-6 col-md-6 text-right des-rol">Desarrollado por <a href="http://www.internovam.com/w/" target="_blank"><img src="img/inter.png" alt=""></a></div>
+       </div>
+      </div>
+    </footer>
 
 <script>  
     $(document).ready(function(){
