Quienes somos al 98%

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 </head>
 <body>
+<div class="popup_bg display-none"></div>
 	<nav class="navbar navbar-default navbar-top" ng-controller="HeaderController">
       <div class="container">
         <header class="navbar-header">
@@ -86,6 +87,6 @@
       $('.bxslider').bxSlider();
     });
   </script>
-  
+  <script src="js/avenir.js"></script>
 </body>
 </html>
