avanze de 15% de pueblo libre

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li ng-class="{ active: isActive('/proyectos/valle-hermoso') }" >
                   <a href="#proyectos/valle-hermoso/">VALLE HERMOSO</a>
+                  <a href="#proyectos/pueblo-libre/">PUEBLO LIBRE</a>
                   <a href="#proyectos/firenze/">FIRENZE</a>
                 </li>                
               </ul>
