--- a/index.html
+++ b/index.html
@@ -18,16 +18,8 @@
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 
-  <!-- jQuery library (served from Google) -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<!-- bxSlider Javascript file -->
-<script src="js/jquery.bxslider.min.js"></script>
-<!-- bxSlider CSS file -->
-<link href="css/jquery.bxslider.css" rel="stylesheet" />
-
 </head>
 <body>
-<div class="popup_bg display-none"></div>
 	<nav class="navbar navbar-default navbar-top" ng-controller="HeaderController">
       <div class="container">
         <header class="navbar-header">
@@ -51,8 +43,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li ng-class="{ active: isActive('/proyectos/valle-hermoso') }" >
                   <a href="#proyectos/valle-hermoso/">VALLE HERMOSO</a>
-                  <a href="#proyectos/pueblo-libre/">PUEBLO LIBRE</a>
-                  <a href="#proyectos/firenze/">FIRENZE</a>
+                  <a href="#proyectos/firenze/">PUEBLO LIBRE</a>
                 </li>                
               </ul>
             </li>
@@ -65,7 +56,6 @@
         </div><!--/.nav-collapse -->
       </div>
   </nav>
-
 
 	<div class="">	    
  
@@ -81,13 +71,6 @@
           <div class="col-xs-6 col-sm-6 col-md-6 text-right des-rol">Desarrollado por <a href="http://www.internovam.com/w/" target="_blank"><img src="img/inter.png" alt=""></a></div>
        </div>
       </div>
-    </footer>
-
-<script>  
-    $(document).ready(function(){
-      $('.bxslider').bxSlider();
-    });
-  </script>
-  <script src="js/avenir.js"></script>
+    </footer> 
 </body>
 </html>
